--- a/Hidden Search Widget/index.html
+++ b/Hidden Search Widget/index.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Hidden Search Widget</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="search">
+    <input type="text" placeholder="Search..." class="input">
+    <button class="btn">
+      <i class="fas fa-search"></i>
+    </button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
