--- a/Event Keycodes/index.html
+++ b/Event Keycodes/index.html
@@ -3,9 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Event KeyCodes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div id="insert">
+    <div class="key">
+      a
+      <small>event.key</small>
+    </div>
+    <div class="key">
+      65
+      <small>event.keyCode</small>
+    </div>
+    <div class="key">
+      KeyA
+      <small>event.code</small>
+    </div>
+    <div class="key">
+      Press any key to get the KeyCode
+    </div>
+    
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
