--- a/Faq Collapse/index.html
+++ b/Faq Collapse/index.html
@@ -3,10 +3,70 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
   <title>FAQ Collapse</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Frequently Asked Questions</h1>
+  <div class="faq-container">
+    <div class="faq active">
+      <h3 class="faq-title">
+        Why shouldn't we trust atoms?
+      </h3>
+
+      <p class="faq text">
+        They make up everything
+      </p>
+
+      <button>
+        <i class="fas fa-chevron-down"></i>
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
+    <div class="faq">
+      <h3 class="faq-title">
+        Where will you be in next 5 years?
+      </h3>
+
+      <p class="faq text">
+        My age + 5 years
+      </p>
+
+      <button>
+        <i class="fas fa-chevron-down"></i>
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
+    <div class="faq">
+      <h3 class="faq-title">
+        How many legs does a human have?
+      </h3>
+
+      <p class="faq text">
+        2 legs
+      </p>
+
+      <button>
+        <i class="fas fa-chevron-down"></i>
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
+    <div class="faq">
+      <h3 class="faq-title">
+        Is earth Flat?
+      </h3>
+
+      <p class="faq text">
+        No, Earth is round.
+      </p>
+
+      <button>
+        <i class="fas fa-chevron-down"></i>
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
+  </div>
   
 
   <script src="script.js"></script>
