Corrected faq text to faq-text

--- a/Faq Collapse/index.html
+++ b/Faq Collapse/index.html
@@ -15,7 +15,7 @@
         Why shouldn't we trust atoms?
       </h3>
 
-      <p class="faq text">
+      <p class="faq-text">
         They make up everything
       </p>
 
@@ -29,7 +29,7 @@
         Where will you be in next 5 years?
       </h3>
 
-      <p class="faq text">
+      <p class="faq-text">
         My age + 5 years
       </p>
 
@@ -43,7 +43,7 @@
         How many legs does a human have?
       </h3>
 
-      <p class="faq text">
+      <p class="faq-text">
         2 legs
       </p>
 
@@ -57,7 +57,7 @@
         Is earth Flat?
       </h3>
 
-      <p class="faq text">
+      <p class="faq-text">
         No, Earth is round.
       </p>
 
