--- a/Faq Collapse/index.html
+++ b/Faq Collapse/index.html
@@ -19,7 +19,7 @@
         They make up everything
       </p>
 
-      <button>
+      <button class="faq-toggle">
         <i class="fas fa-chevron-down"></i>
         <i class="fas fa-times"></i>
       </button>
@@ -33,7 +33,7 @@
         My age + 5 years
       </p>
 
-      <button>
+      <button class="faq-toggle">
         <i class="fas fa-chevron-down"></i>
         <i class="fas fa-times"></i>
       </button>
@@ -47,7 +47,7 @@
         2 legs
       </p>
 
-      <button>
+      <button class="faq-toggle">
         <i class="fas fa-chevron-down"></i>
         <i class="fas fa-times"></i>
       </button>
@@ -61,7 +61,7 @@
         No, Earth is round.
       </p>
 
-      <button>
+      <button class="faq-toggle">
         <i class="fas fa-chevron-down"></i>
         <i class="fas fa-times"></i>
       </button>
