--- a/Incrementing Counter/index.html
+++ b/Incrementing Counter/index.html
@@ -5,9 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Incrementing Counter</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  
+  <div class="counter-container">
+    <i class="fab fa-twitter fa-3x"></i>
+    <div class="counter" data-target="12000">12000</div>
+    <span>Twitter Followers</span>
+  </div>
+
+  <div class="counter-container">
+    <i class="fab fa-youtube fa-3x"></i>
+    <div class="counter" data-target="5000">5000</div>
+    <span>Youtube Subscribers</span>
+  </div>
+
+  <div class="counter-container">
+    <i class="fab fa-facebook fa-3x"></i>
+    <div class="counter" data-target="7500">7500</div>
+    <span>Facebook Fans</span>
+  </div>
 
   <script src="script.js"></script>
 </body>
