--- a/Movie App/index.html
+++ b/Movie App/index.html
@@ -7,7 +7,50 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header>
+    <form id="form">
+      <input type="text" id="search" class="search" placeholder="Search">
+    </form>
+  </header>
   
+  <main id="main">
+    <div class="movie">
+      <img src="https://images.unsplash.com/photo-1518173835740-f5d14111d76a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=970&q=80" alt="">
+      <div class="movie-info">
+        <h3>Movie Title</h3>
+        <span class="green">9.8</span>
+      </div>
+      <div class="overview">
+        <h3>Overview</h3>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil optio voluptate eos error officia. Rem tenetur repellat ab doloribus aperiam!
+      </div>
+    </div>
+
+    <div class="movie">
+      <img src="https://images.unsplash.com/photo-1518173835740-f5d14111d76a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=970&q=80" alt="">
+      <div class="movie-info">
+        <h3>Movie Title</h3>
+        <span class="green">9.8</span>
+      </div>
+      <div class="overview">
+        <h3>Overview</h3>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil optio voluptate eos error officia. Rem tenetur repellat ab doloribus aperiam!
+      </div>
+    </div>
+
+    <div class="movie">
+      <img src="https://images.unsplash.com/photo-1518173835740-f5d14111d76a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=970&q=80" alt="">
+      <div class="movie-info">
+        <h3>Movie Title</h3>
+        <span class="green">9.8</span>
+      </div>
+      <div class="overview">
+        <h3>Overview</h3>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil optio voluptate eos error officia. Rem tenetur repellat ab doloribus aperiam!
+      </div>
+    </div>
+    
+  </main>
 
   <script src="script.js"></script>
 </body>
