Add search functionality

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <nav>
     <h1>50Days50Projects</h1>
     <div class="search">
-      <input type="text" class="input" placeholder="Search...">
+      <input type="text" class="input" id="input" placeholder="Search..." onkeyup="searchtype()">
       <button class="btn">
         <i class="fas fa-search"></i>
       </button>
     </div>
   </nav>
-  <div class="projects-container">
+  <div class="projects-container" id="projects-container">
     <div class="project">
       <img src="img/ExpandingCards.png" alt="Expanding Cards">
       <h3 class="project-title">Expanding Cards</h3>
