Add Search Project placeholder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav>
     <h1>50Days50Projects</h1>
     <div class="search">
-      <input type="text" class="input" id="input" placeholder="Search..." onkeyup="searchtype()">
+      <input type="text" class="input" id="input" placeholder="Search Project" onkeyup="searchtype()">
       <button class="btn">
         <i class="fas fa-search"></i>
       </button>
