Add Slder container, Slide image, navigation left right button

--- a/Background Slider/index.html
+++ b/Background Slider/index.html
@@ -3,11 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
   <title>Background Slider</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="slider-container">
+    <div class="slide active" style="background-image: url(https://images.unsplash.com/photo-1568292342316-60aa3d36f4b3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8d2FscGFwZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=1200&q=60);"></div>
+    <div class="slide" style="background-image: url(https://images.unsplash.com/photo-1548602088-9d12a4f9c10f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8d2FscGFwZXJ8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=1200&q=60);""></div>
+    <div class="slide" style="background-image: url(https://images.unsplash.com/photo-1572238916064-69673fdc419f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHdhbHBhcGVyfGVufDB8fDB8fHww&auto=format&fit=crop&w=1200&q=60);"></div>
+    <div class="slide" style="background-image: url(https://images.unsplash.com/photo-1620358594775-050d831306a3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fHdhbHBhcGVyfGVufDB8fDB8fHww&auto=format&fit=crop&w=1200&q=60);"></div>
+    <div class="slide" style="background-image: url(https://images.unsplash.com/photo-1634396936162-c7f87e7ad854?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHdhbHBhcGVyfGVufDB8fDB8fHww&auto=format&fit=crop&w=1200&q=60);"></div>
+    <button class="left left-arrow" id="left"><i class="fas fa-arrow-left"></i></button>
+    <button class="right right-arrow" id="right"><i class="fas fa-arrow-right"></i></button>
+  </div>
 
   <script src="script.js"></script>
 </body>
