--- a/Background Slider/index.html
+++ b/Background Slider/index.html
@@ -14,8 +14,8 @@
     <div class="slide" style="background-image: url(https://images.unsplash.com/photo-1572238916064-69673fdc419f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHdhbHBhcGVyfGVufDB8fDB8fHww&auto=format&fit=crop&w=1200&q=60);"></div>
     <div class="slide" style="background-image: url(https://images.unsplash.com/photo-1620358594775-050d831306a3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fHdhbHBhcGVyfGVufDB8fDB8fHww&auto=format&fit=crop&w=1200&q=60);"></div>
     <div class="slide" style="background-image: url(https://images.unsplash.com/photo-1634396936162-c7f87e7ad854?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fHdhbHBhcGVyfGVufDB8fDB8fHww&auto=format&fit=crop&w=1200&q=60);"></div>
-    <button class="left left-arrow" id="left"><i class="fas fa-arrow-left"></i></button>
-    <button class="right right-arrow" id="right"><i class="fas fa-arrow-right"></i></button>
+    <button class="arrow left-arrow" id="left"><i class="fas fa-arrow-left"></i></button>
+    <button class="arrow right-arrow" id="right"><i class="fas fa-arrow-right"></i></button>
   </div>
 
   <script src="script.js"></script>
