--- a/Theme Clock/index.html
+++ b/Theme Clock/index.html
@@ -7,7 +7,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <button class="toggle">Dark Mode</button>
+
+  <div class="clock-container">
+    <div class="clock">
+      <div class="needle hour"></div>
+      <div class="needle minute"></div>
+      <div class="needle second"></div>
+    </div>
+
+    <div class="time">12:00</div>
+    <div class="date">Thursday, July <span class="cirlce">27</span></div>
+  </div>
 
   <script src="script.js"></script>
 </body>
