--- a/Theme Clock/index.html
+++ b/Theme Clock/index.html
@@ -14,10 +14,11 @@
       <div class="needle hour"></div>
       <div class="needle minute"></div>
       <div class="needle second"></div>
+      <div class="center-point"></div>
     </div>
 
-    <div class="time">12:00</div>
-    <div class="date">Thursday, July <span class="cirlce">27</span></div>
+    <div class="time"></div>
+    <div class="date"><span class="circle"></span></div>
   </div>
 
   <script src="script.js"></script>
