Add Background slider and clock theme project

--- a/index.html
+++ b/index.html
@@ -154,6 +154,22 @@
         <a class="project-link" href="Movie App/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/BackgroundSlider.png" alt="Movie App">
+      <h3 class="project-title">Background Slider</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Background%20Slider"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Background Slider/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
+    <div class="project">
+      <img src="img/ThemeClock.png" alt="Movie App">
+      <h3 class="project-title">Theme Clock</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Theme%20Clock"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Theme Clock/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
   </div>
 
   <script src="script.js"></script>
