Updated alt of images

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </div>
     </div>
     <div class="project">
-      <img src="img/BackgroundSlider.png" alt="Movie App">
+      <img src="img/BackgroundSlider.png" alt="Background Slider">
       <h3 class="project-title">Background Slider</h3>
       <div class="project-links">
         <a href="https://github.com/CodeKisku/50days50projects/tree/master/Background%20Slider"><i class="fa-brands fa-github"></i> Github Link</a>
@@ -163,7 +163,7 @@
       </div>
     </div>
     <div class="project">
-      <img src="img/ThemeClock.png" alt="Movie App">
+      <img src="img/ThemeClock.png" alt="Theme Clock">
       <h3 class="project-title">Theme Clock</h3>
       <div class="project-links">
         <a href="https://github.com/CodeKisku/50days50projects/tree/master/Theme%20Clock"><i class="fa-brands fa-github"></i> Github Link</a>
