--- a/index.html
+++ b/index.html
@@ -170,6 +170,14 @@
         <a class="project-link" href="Theme Clock/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/ButtonRippleEffect.png" alt="Button Ripple Effect">
+      <h3 class="project-title">Button Ripple Effect</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Button%20Ripple%20Effect"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Button Ripple Effect/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
   </div>
 
   <script src="script.js"></script>
