--- a/index.html
+++ b/index.html
@@ -178,6 +178,14 @@
         <a class="project-link" href="Button Ripple Effect/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/DragNDrog.png" alt="Drag N Drop">
+      <h3 class="project-title">Drag N Drop</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Drag%20N%20Drop"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Drag N Drop/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
   </div>
 
   <script src="script.js"></script>
