--- a/Drawing App/index.html
+++ b/Drawing App/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <canvas id="canvas" width="800" height=800></canvas>
+  <canvas id="canvas"></canvas>
   <div class="toolbox">
     <button id="decrease">-</button>
     <span class="size">20</span>
     <button id="increase">+</button>
     <input type="color" id="color">
-    <button id="clear">X</button>
+    <button id="clear" >X</button>
   </div>
 
   <script src="script.js"></script>
