Add canvas height & weight, size id and drawing app para element

--- a/Drawing App/index.html
+++ b/Drawing App/index.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <canvas id="canvas"></canvas>
+  <canvas id="canvas" width="1080" height="800"></canvas>
   <div class="toolbox">
     <button id="decrease">-</button>
-    <span class="size">20</span>
+    <span id="size">20</span>
     <button id="increase">+</button>
     <input type="color" id="color">
-    <button id="clear" >X</button>
+    <p>Drawing App</p>
+    <button id="clear">Clear</button>
   </div>
 
   <script src="script.js"></script>
