--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
         <a class="project-link" href="Drag N Drop/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/DrawingApp.png" alt="Drawing App">
+      <h3 class="project-title">Drawing App</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Drawing%20App"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Drawing App/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
   </div>
 
   <script src="script.js"></script>
