--- a/Kinetic Loader/index.html
+++ b/Kinetic Loader/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="kinetic"></div>
 
   <script src="script.js"></script>
 </body>
