Add Kinetic loader to the project section

--- a/index.html
+++ b/index.html
@@ -194,6 +194,22 @@
         <a class="project-link" href="Drawing App/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/KineticLoader.gif" alt="Kinetic Loader">
+      <h3 class="project-title">Kinetic Loader</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Kinetic%20Loader"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Kinetic Loader/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
+    <!-- <div class="project">
+      <img src="img/" alt="">
+      <h3 class="project-title"></h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href=""><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div> -->
   </div>
 
   <script src="script.js"></script>
