Add content placeholder project to the website

--- a/index.html
+++ b/index.html
@@ -202,6 +202,14 @@
         <a class="project-link" href="Kinetic Loader/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/ContentPlaceholder.gif" alt="Content Placeholder">
+      <h3 class="project-title">Content Placeholder</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Content%20Placeholder"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Content Placeholder/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
     <!-- <div class="project">
       <img src="img/" alt="">
       <h3 class="project-title"></h3>
