--- a/Sticky Navbar/index.html
+++ b/Sticky Navbar/index.html
@@ -7,7 +7,32 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <nav class="nav">
+    <div class="container">
+      <h1 class="logo"><a href="/index.html">My Website</a></h1>
+      <ul>
+        <li><a href="#" class="active">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="hero">
+    <div class="container">
+      <h1>Welcome to my Website</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, mollitia!</p>
+    </div>
+  </div>
+
+  <section class="container content">
+    <h2>Content One</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quasi eveniet nulla tenetur ducimus inventore a quam iusto vitae est ab facilis explicabo corrupti alias distinctio consequuntur nihil, possimus aliquid molestiae. Magni aperiam sunt distinctio vitae cumque, qui libero itaque culpa repellendus ipsum ad assumenda dignissimos reprehenderit eum enim veniam. Quod ducimus est nulla quidem porro veritatis qui autem vel, explicabo neque distinctio id dolorem pariatur corrupti itaque cupiditate facilis libero ea veniam debitis eius quisquam. Velit commodi ratione, tempora aspernatur officia cumque, maxime quidem, vitae iste eveniet quod aliquid reiciendis blanditiis! Voluptas asperiores quam animi adipisci quod fugit neque.</p>
+
+    <h2>Content Two</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui aliquid nostrum, molestiae illum eius similique doloribus. Minus, natus hic quasi delectus iure vel non quae vitae rem magni. Nostrum, accusamus voluptatum nam fugit aut animi, provident quasi minus explicabo labore ratione earum rerum asperiores nulla obcaecati perspiciatis nisi sed esse.</p>
+  </section>
 
   <script src="script.js"></script>
 </body>
