--- a/index.html
+++ b/index.html
@@ -210,6 +210,14 @@
         <a class="project-link" href="Content Placeholder/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/StickyNavbar.gif" alt="Sticky Navbar">
+      <h3 class="project-title">Sticky Navbar</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Sticky%20Navbar"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Sticky Navbar/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
     <!-- <div class="project">
       <img src="img/" alt="">
       <h3 class="project-title"></h3>
