--- a/Double Vertical Slider/index.html
+++ b/Double Vertical Slider/index.html
@@ -5,9 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Double Vertical Slider</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  
+  <div class="slider-container">
+    <div class="left-slide">
+      <div style="background-color: #fec900;">
+        <h1>Sunflower</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, illum.</p>
+      </div>
+      <div style="background-color: #026697;">
+        <h1>Ocean</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, illum.</p>
+      </div>
+      <div style="background-color: #0e2020;">
+        <h1>Forest</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, illum.</p>
+      </div>
+      <div style="background-color: #f0a901;">
+        <h1>Sun</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, illum.</p>
+      </div>
+    </div>
+    <div class="right-slide">
+      <div style="background-image: url(https://images.unsplash.com/photo-1504386106331-3e4e71712b38?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8c3VufGVufDB8MHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=1200&q=60);"></div>
+      <div style="background-image: url(https://images.unsplash.com/photo-1476231682828-37e571bc172f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8Zm9yZXN0fGVufDB8MHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=1200&q=60);"></div>
+      <div style="background-image: url(https://images.unsplash.com/photo-1530053969600-caed2596d242?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8b2NlYW4lMjBibHVlfGVufDB8MHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=1200&q=60);"></div>
+      <div style="background-image: url(https://images.unsplash.com/photo-1517241080758-95a42c519c1a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8c3VuZmxvd2VyfGVufDB8MHwwfHx8Mg%3D%3D&auto=format&fit=crop&w=1200&q=60);"></div>
+    </div>
+    <div class="action-buttons">
+      <button class="down-button">
+        <i class="fas fa-arrow-down"></i>
+      </button>
+      <button class="up-button">
+        <i class="fas fa-arrow-up"></i>
+      </button>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
