Add double vertical slider project to the project section

--- a/index.html
+++ b/index.html
@@ -218,6 +218,14 @@
         <a class="project-link" href="Sticky Navbar/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/DoubleVerticalSlider.gif" alt="Double Vertical Slider">
+      <h3 class="project-title">Double Vertical Slider</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Double%20Vertical%20Slider"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Double Vertical Slider/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
     <!-- <div class="project">
       <img src="img/" alt="">
       <h3 class="project-title"></h3>
