--- a/Toast Notification/index.html
+++ b/Toast Notification/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div id="toasts"></div>
 
+  <button class="btn" id="button">Show Notification</button>
   <script src="script.js"></script>
 </body>
 </html>
