Add Toast Notification project to project section

--- a/index.html
+++ b/index.html
@@ -226,6 +226,14 @@
         <a class="project-link" href="Double Vertical Slider/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/ToastNotification.png" alt="Toast Notification">
+      <h3 class="project-title">Toast Notification</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Toast%20Notification"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Toast Notification/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
     <!-- <div class="project">
       <img src="img/" alt="">
       <h3 class="project-title"></h3>
