--- a/index.html
+++ b/index.html
@@ -234,6 +234,14 @@
         <a class="project-link" href="Toast Notification/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/GithubProfiles.png" alt="Github Profiles">
+      <h3 class="project-title">Github Profiles</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Github%20Profiles"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Github Profiles/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
     <!-- <div class="project">
       <img src="img/" alt="">
       <h3 class="project-title"></h3>
