Add heading, like counter, and div in which we click

--- a/Double Heart Click/index.html
+++ b/Double Heart Click/index.html
@@ -5,10 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Double Click Heart</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <h3>Double Click on the image to <i class="fas fa-heart"></i> it</h3>
+  <small>You liked it <span id="times">0</span> times</small>
+  <div class="loveMe"></div>
   
-
   <script src="script.js"></script>
 </body>
 </html>
