Add double heart click project to the project section

--- a/index.html
+++ b/index.html
@@ -242,6 +242,14 @@
         <a class="project-link" href="Github Profiles/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/DoubleClickHeart.png" alt="Double Heart Click">
+      <h3 class="project-title">Double Heart Click</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Double%20Heart%20Click"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Double Heart Click/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
     <!-- <div class="project">
       <img src="img/" alt="">
       <h3 class="project-title"></h3>
