--- a/Auto Text Effect/index.html
+++ b/Auto Text Effect/index.html
@@ -7,10 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 id="text">Starting...</h1>
-  <div>
+  <h1 id="text"></h1>
+  <div class="input-text">
+    <input type="text" id="print-text" placeholder="Enter your text here">
+    <input onclick="sendText()" id="submit" type="submit" value="Submit">
+  </div>
+  <div class="input-speed">
     <label for="speed">Speed:</label>
-    <input type="number" name="speed" id="speed" value="1" min="1" max="5" step="1">
+    <input type="number" name="speed" id="speed" value="3" min="1" max="5" step="1">
   </div>
   
 
