--- a/index.html
+++ b/index.html
@@ -250,6 +250,14 @@
         <a class="project-link" href="Double Heart Click/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
       </div>
     </div>
+    <div class="project">
+      <img src="img/AutoTextEffect.gif" alt="Auto Text Effect">
+      <h3 class="project-title">Auto Text Effect</h3>
+      <div class="project-links">
+        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Auto%20Text%20Effect"><i class="fa-brands fa-github"></i> Github Link</a>
+        <a class="project-link" href="Auto Text Effect/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
+      </div>
+    </div>
     <!-- <div class="project">
       <img src="img/" alt="">
       <h3 class="project-title"></h3>
