Remove Hardcoded values of projects and Add function bodyLoad on body element

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body onload="bodyLoad()">
   <nav>
     <h1>50Days50Projects</h1>
     <div class="search">
@@ -17,256 +17,7 @@
       </button>
     </div>
   </nav>
-  <div class="projects-container" id="projects-container">
-    <div class="project">
-      <img src="img/ExpandingCards.png" alt="Expanding Cards">
-      <h3 class="project-title">Expanding Cards</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Expanding%20Cards"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Expanding Cards/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/ProgressSteps.png" alt="Progress Steps">
-      <h3 class="project-title">Progress Steps</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Progress%20Steps"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Progress Steps/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/RotatingNavigationAnimation.png" alt="Rotating Navigation Animation">
-      <h3 class="project-title">Rotating Navigation Animation</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Rotating%20Navigation"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Rotating Navigation/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/HiddenSearchWidget.png" alt="Hidden Search Widget">
-      <h3 class="project-title">Hidden Search Widget</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Hidden%20Search%20Widget"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Hidden Search Widget/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/BlurryLoading.png" alt="Blurry Loading">
-      <h3 class="project-title">Blurry Loading</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Blurry%20Loading"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Blurry Loading/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/ScrollAnimation.png" alt="Scroll Animation">
-      <h3 class="project-title">Scroll Animation</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Scroll%20Animation"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Scroll Animation/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/SplitLandingPage.png" alt="Split Landing Page">
-      <h3 class="project-title">Split Landing Page</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Split%20Landing%20Page"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Split Landing Page/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/FormWave.png" alt="Form Wave">
-      <h3 class="project-title">Form Wave Animation</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Form%20Wave%20Animation"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Form Wave Animation/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/SoundBoard.png" alt="Sound Board">
-      <h3 class="project-title">Sound Board</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Sound%20Board"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Sound Board/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/DadJokes.png" alt="Dad Jokes">
-      <h3 class="project-title">Dad Jokes</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Dad%20Jokes"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Dad Jokes/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/EventKeycodes.png" alt="Event Keycodes">
-      <h3 class="project-title">Event Keycodes</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Event%20Keycodes"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Event Keycodes/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/FAQCollapse.png" alt="FAQ Collapse">
-      <h3 class="project-title">FAQ Collapse</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/FAQ%20Collapse"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Faq Collapse/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/RandomChoicePicker.png" alt="Random Choice Picker">
-      <h3 class="project-title">Random Choice Picker</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Random%20Choice%20Picker"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Random Choice Picker/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/AnimatedNavigation.png" alt="Animated Navigation">
-      <h3 class="project-title">Animated Navigation</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Animated%20Navigation"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Animated Navigation/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/IncrementingCounter.png" alt="Incrementing Counter">
-      <h3 class="project-title">Incrementing Counter</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Incrementing%20Counter"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Incrementing Counter/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/DrinkWater.png" alt="Drink Water">
-      <h3 class="project-title">Drink Water</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Drink%20Water"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Drink Water/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a>
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/MovieApp.png" alt="Movie App">
-      <h3 class="project-title">Movie App</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Movie%20App"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Movie App/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/BackgroundSlider.png" alt="Background Slider">
-      <h3 class="project-title">Background Slider</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Background%20Slider"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Background Slider/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/ThemeClock.png" alt="Theme Clock">
-      <h3 class="project-title">Theme Clock</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Theme%20Clock"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Theme Clock/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/ButtonRippleEffect.png" alt="Button Ripple Effect">
-      <h3 class="project-title">Button Ripple Effect</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Button%20Ripple%20Effect"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Button Ripple Effect/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/DragNDrog.png" alt="Drag N Drop">
-      <h3 class="project-title">Drag N Drop</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Drag%20N%20Drop"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Drag N Drop/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/DrawingApp.png" alt="Drawing App">
-      <h3 class="project-title">Drawing App</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Drawing%20App"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Drawing App/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/KineticLoader.gif" alt="Kinetic Loader">
-      <h3 class="project-title">Kinetic Loader</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Kinetic%20Loader"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Kinetic Loader/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/ContentPlaceholder.gif" alt="Content Placeholder">
-      <h3 class="project-title">Content Placeholder</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Content%20Placeholder"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Content Placeholder/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/StickyNavbar.gif" alt="Sticky Navbar">
-      <h3 class="project-title">Sticky Navbar</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Sticky%20Navbar"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Sticky Navbar/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/DoubleVerticalSlider.gif" alt="Double Vertical Slider">
-      <h3 class="project-title">Double Vertical Slider</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Double%20Vertical%20Slider"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Double Vertical Slider/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/ToastNotification.png" alt="Toast Notification">
-      <h3 class="project-title">Toast Notification</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Toast%20Notification"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Toast Notification/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/GithubProfiles.png" alt="Github Profiles">
-      <h3 class="project-title">Github Profiles</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Github%20Profiles"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Github Profiles/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/DoubleClickHeart.png" alt="Double Heart Click">
-      <h3 class="project-title">Double Heart Click</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Double%20Heart%20Click"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Double Heart Click/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <div class="project">
-      <img src="img/AutoTextEffect.gif" alt="Auto Text Effect">
-      <h3 class="project-title">Auto Text Effect</h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/Auto%20Text%20Effect"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href="Auto Text Effect/index.html"><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div>
-    <!-- <div class="project">
-      <img src="img/" alt="">
-      <h3 class="project-title"></h3>
-      <div class="project-links">
-        <a href="https://github.com/CodeKisku/50days50projects/tree/master/"><i class="fa-brands fa-github"></i> Github Link</a>
-        <a class="project-link" href=""><i class="fa-solid fa-up-right-from-square"></i> Demo Link</a> 
-      </div>
-    </div> -->
-  </div>
+  <div class="projects-container" id="projects-container"></div>
 
   <script src="script.js"></script>
 </body>
