--- a/Password Generator/index.html
+++ b/Password Generator/index.html
@@ -5,10 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Password Generator</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  
-
+  <div class="container">
+    <h2>Password Generator</h2>
+    <div class="result-container">
+      <span class="result"></span>
+    </div>
+    <button class="btn" id="clipboard">
+      <i class="far fa-clipboard"></i>
+    </button>
+    <div class="settings">
+      <div class="setting">
+        <label>Password Length</label>
+        <input type="number"  id="length" min="4" max="20"
+        value="20">
+      </div>
+      <div class="setting">
+        <label >Include Uppercase Letter</label>
+        <input type="checkbox"  id="uppercase" checked>
+      </div>
+      <div class="setting">
+        <label>Include Lowercase Letter</label>
+        <input type="checkbox" id="lowercase" checked>
+      </div>
+      <div class="setting">
+        <label>Include Numbers</label=>
+        <input type="checkbox" id="numbers" checked>
+      </div>
+      <div class="setting">
+        <label>Include Symbols</label>
+        <input type="checkbox" id="symbols" checked>
+      </div>
+    </div>
+    <button class="btn btn-large" id="generate">Generate Password</button>
+  </div>
+ 
   <script src="script.js"></script>
 </body>
 </html>
