Add container styles, btn styles, setting styles

--- a/Password Generator/index.html
+++ b/Password Generator/index.html
@@ -11,11 +11,11 @@
   <div class="container">
     <h2>Password Generator</h2>
     <div class="result-container">
-      <span class="result"></span>
+      <span id="result"></span>
+      <button class="btn" id="clipboard">
+        <i class="far fa-clipboard"></i>
+      </button>
     </div>
-    <button class="btn" id="clipboard">
-      <i class="far fa-clipboard"></i>
-    </button>
     <div class="settings">
       <div class="setting">
         <label>Password Length</label>
@@ -31,7 +31,7 @@
         <input type="checkbox" id="lowercase" checked>
       </div>
       <div class="setting">
-        <label>Include Numbers</label=>
+        <label>Include Numbers</label>
         <input type="checkbox" id="numbers" checked>
       </div>
       <div class="setting">
