--- a/Good Cheap Fast/index.html
+++ b/Good Cheap Fast/index.html
@@ -9,7 +9,7 @@
 <body>
   <h2>How do you want your project to be?</h2>
   <div class="toggle-container">
-    <input type="checkbox" class="toggle" id="good">
+    <input type="checkbox" class="toggle" id="good" checked>
     <label for="good" class="label">
       <div class="ball"></div>
     </label>
