--- a/Notes App/index.html
+++ b/Notes App/index.html
@@ -4,11 +4,37 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Notes App</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
+  <!-- Local CSS -->
+  <link rel="stylesheet" href="style.css" />  
 </head>
 <body>
-  
+  <!-- Button for adding notes -->
+  <button class="add" id="">
+    <!-- Plus icon by font awesome -->
+    <i class="fas fa-plus"></i> Add Note
+  </button>
+
+  <!-- Hardcoded note container to be added when above button is clicked -->
+  <div class="note">
+    <div class="tools">
+      <!-- This div conatins edit and delete buttons  -->
+      <button class="edit"><i class="fas fa-edit"></i></button>
+      <button class="delete"><i class="fas fa-trash-alt"></i></button>
+    </div>
+
+    <div class="hidden"></div>
+    <!-- This div will be used dynamically when the user is not editing text and will be set to display: none when user is not editing -->
+
+    <!-- This is the area where user will input note as text -->
+    <textarea></textarea>
+
+  </div>  
+
+  <!-- Font Awesome script kit -->
+  <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
+  <!-- Marked cdn script -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/7.0.1/marked.min.js" integrity="sha512-FHU3gUf70mvgIl4tnPvBmDSNmHremjYCCMsNlmuYQCytJUPOADAPjNoh7ifa/q7itNprzJnMjPMoDX2yZFNVhw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- Local Script -->
   <script src="script.js"></script>
 </body>
 </html>
