Add images to div container and add two buttons for prev and next

--- a/Image Carousel/index.html
+++ b/Image Carousel/index.html
@@ -7,7 +7,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="carousel">
+    <div class="image-container">
+      <img src="https://images.unsplash.com/photo-1497648781639-05f14ecd5902?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8dmVydGljYWx8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=600&q=60" alt="First Image">
+      <img src="https://images.unsplash.com/photo-1607468103349-00fafe69117c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fHZlcnRpY2FsfGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60" alt="Second Image">
+      <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGFuZHNjYXBlfGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60" alt="Third Image">
+      <img src="https://images.unsplash.com/photo-1511884642898-4c92249e20b6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bGFuZHNjYXBlfGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=600&q=60" alt="Fourth Image">
+      <img src="https://images.unsplash.com/photo-1491864483946-1f06be97b71d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGxhbmRzY2FwZSUyMHNub3d8ZW58MHwwfDB8fHww&auto=format&fit=crop&w=600&q=60" alt="Fifth Image">
+    </div>
 
+    <div class="buttons-container">
+      <button id="left">Prev</button>
+      <button id="right">Next</button>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
