--- a/Pokedex/index.html
+++ b/Pokedex/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <h1>Pokedex</h1>
+  <div class="poke-container" id="poke-container"></div>
 
   <script src="script.js"></script>
 </body>
