Add button , add boxes container with 16 boxes within it

--- a/3D Background Boxes/index.html
+++ b/3D Background Boxes/index.html
@@ -7,7 +7,25 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <button class="magic" id="btn">Magic 🎩</button>
+  <div class="boxes" id="boxes">
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+  </div>
 
   <script src="script.js"></script>
 </body>
