--- a/3D Background Boxes/index.html
+++ b/3D Background Boxes/index.html
@@ -8,24 +8,7 @@
 </head>
 <body>
   <button class="magic" id="btn">Magic 🎩</button>
-  <div class="boxes" id="boxes">
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
-  </div>
+  <div class="boxes" id="boxes"></div>
 
   <script src="script.js"></script>
 </body>
