--- a/Verify Account Ui/index.html
+++ b/Verify Account Ui/index.html
@@ -7,6 +7,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
+    <h2>Verify Your Account</h2>
+    <p>We emailed you the six digit code to user_email@gmail.com <br> Enter the code below to confirm your email address.</p>
+
+    <div class="code-container">
+      <input type="number" class="code" placeholder="0" min="0" max="9" required>
+      <input type="number" class="code" placeholder="0" min="0" max="9" required>
+      <input type="number" class="code" placeholder="0" min="0" max="9" required>
+      <input type="number" class="code" placeholder="0" min="0" max="9" required>
+      <input type="number" class="code" placeholder="0" min="0" max="9" required>
+      <input type="number" class="code" placeholder="0" min="0" max="9" required>
+    </div>
+    <small class="info">This is a design only. We didn't actually send you an email as we dont't have your email, right?</small>
+  </div>
   
   <script src="script.js"></script>
 </body>
