Add Testimonial Container, testimonial, user image, username, user role

--- a/Testimonial Box Switcher/index.html
+++ b/Testimonial Box Switcher/index.html
@@ -4,9 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Testimonial Box Switcher</title>
+  <script src="https://kit.fontawesome.com/d1a84ed9ad.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="testimonial-container">
+    <div class="progress-bar">
+      <div class="fas fa-quote-right fa-quote"></div>
+      <div class="fas fa-quote-left fa-quote"></div>
+      <p class="testimonial">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quos dolores minima, adipisci exercitationem officiis alias, molestias rem consequuntur ducimus, earum voluptatem! Nemo eveniet impedit libero totam, sed adipisci amet fuga vel necessitatibus? Placeat, distinctio laborum quia velit labore, sapiente quo doloremque perferendis, officia error numquam. Nihil iste nemo dicta!
+      </p>
+      <div class="user">
+        <img src="https://randomuser.me/api/portraits/women/4.jpg" alt="user" class="user-image">
+        <div class="user-details">
+          <h4 class="username">Not Angelina Jolie</h4>
+          <p class="role">Developer</p>
+        </div>
+      </div>
+    </div>
+  </div>
   
   <script src="script.js"></script>
 </body>
