--- a/Testimonial Box Switcher/index.html
+++ b/Testimonial Box Switcher/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="testimonial-container">
-    <div class="progress-bar">
+    <div class="progress-bar"></div>
       <div class="fas fa-quote-right fa-quote"></div>
       <div class="fas fa-quote-left fa-quote"></div>
       <p class="testimonial">
@@ -23,7 +23,6 @@
         </div>
       </div>
     </div>
-  </div>
   
   <script src="script.js"></script>
 </body>
