--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -7,7 +7,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <h1>todos</h1>
+  <form id="form">
+    <input type="text" class="input" id="input" placeholder="Enter your todo" autocomplete="off">
+    
+    <ul class="todos" id="todos">
+      <li>First Todo</li>
+      <li>Second Todo</li>
+    </ul>
+  </form>
+
+
   <script src="script.js"></script>
 </body>
 </html>
