Add screen div for start , selection, playing game

--- a/Insect Catch Game/index.html
+++ b/Insect Catch Game/index.html
@@ -7,6 +7,49 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="screen">
+    <h1>Catch the Insect</h1>
+    <button class="btn" id="start-btn">Play Game</button>
+  </div>
+
+  <div class="screen">
+    <h1>What is your "favorite" insect?</h1>
+    <ul class="insects-lists">
+      <li>
+        <button class="choose-insect-btn">
+          <p>Fly</p>
+          <img src="https://freepngimg.com/thumb/fly/3-2-fly-png-7.png" alt="fly">
+        </button>
+      </li>
+      <li>
+        <button class="choose-insect-btn">
+          <p>Mosquito</p>
+          <img src="https://freepngimg.com/thumb/categories/1297.png" alt="mosquito">
+        </button>
+      </li>
+      <li>
+        <button class="choose-insect-btn">
+          <p>Spider</p>
+          <img src="https://freepngimg.com/thumb/spider/6-spider-png-image.png" alt="spider">
+        </button>
+      </li>
+      <li>
+        <button class="choose-insect-btn">
+          <p>Roach</p>
+          <img src="https://www.pngmart.com/files/22/Roach-PNG-Transparent.png" alt="roach">
+        </button>
+      </li>
+    </ul>
+  </div>
+
+  <div class="screen game-container">
+    <h3 id="time">Time: 00:00</h3>
+    <h3 id="score">Score: 0</h3>
+    <h5 class="message">
+      Are you annoyed yet? <br>
+      You are playing an impossible game!!
+    </h5>
+  </div>
   
   <script src="script.js"></script>
 </body>
